--- a/src/app/components/medidores/medidorRegistrosMensuales.html
+++ b/src/app/components/medidores/medidorRegistrosMensuales.html
@@ -18,6 +18,7 @@
             <center>
               <h2>Registros de Lectura Mensual</h2>
             </center>
+            <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px; width: 100%; margin-bottom: 20px;" ng-click="vm.goToRegistro()">Registrar Lectura</md-button>
           </div>
         </div>
       </div>
