--- a/src/app/components/menuRegistros/menuRegistros.html
+++ b/src/app/components/menuRegistros/menuRegistros.html
@@ -105,7 +105,8 @@
             </div>
 
             <div flex>
-              <md-button ui-sref="registroMensual">
+              <!--<md-button ui-sref="registroMensual">-->
+              <md-button ng-click="vm.goToMedidores()">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
