--- a/src/app/components/comites/comites.html
+++ b/src/app/components/comites/comites.html
@@ -21,36 +21,6 @@
           </div>
         </div>
 
-        <!--<div ng-controller="AutoCtrl as ctrl" layout="column" ng-cloak>
-          <md-content class="md-padding" style="width: 300px;">
-            <form ng-cloack>
-              <md-autocomplete
-                  md-selected-item="vm.selectedItem"
-                  md-search-text="vm.searchText"
-                  md-items="item in vm.querySearch(vm.searchText)"
-                  md-item-text="item.nombre "
-                  md-min-length="0"
-                  placeholder="Nombre del Comité"
-                  md-autofocus>
-                <md-item-template>
-                  <md-button >
-                    <span ng-click="vm.vercomite($index)">{{item.nombre}}</span>
-                  </md-button>
-                </md-item-template>
-                <md-not-found>
-                  <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item.nombre}}</span>
-                </md-not-found>
-              </md-autocomplete>
-            </form>
-          </md-content>
-        </div>
-
-        <div flex style="margin-bottom: 15px;">
-          <center>
-            <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px; width: 200px;" ng-click="vm.autocompletar($event, vm.comite)">Buscar Comité</md-button>
-          </center>
-        </div>-->
-
       </div>
     </div>
     <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
@@ -67,7 +37,7 @@
             </tr>
           </thead>
           <tbody md-body>
-            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="comit in vm.comite">
+            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="comit in vm.comite | filter:vm.datocomite">
               <td md-cell>{{ comit.id }}</td>
               <td md-cell>{{ comit.nombre }}</td>
               <td md-cell>{{ comit.comuna.des_comu }}</td>
