--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -11,14 +11,14 @@
               <md-input-container class="md-icon-float md-block">
                 <label>Medidor</label>
                 <md-icon md-svg-src="/assets/img/number.svg"></md-icon>
-                <input ng-model="vm.lecMensual.medidor_id" type="number">
+                <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
               </md-input-container>
             </div>
             <div flex>
               <md-input-container md-no-float class="md-block">
                 <label>Vivienda</label>
                 <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-                <input ng-model="vm.lecMensual.vivienda_id" type="number">
+                <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
               </md-input-container>
             </div>
           </div>
@@ -31,7 +31,9 @@
               <md-input-container md-no-float class="md-block">
                 <label>Año</label>
                 <md-icon md-svg-src="/assets/img/calendar.svg"></md-icon>
-                <input ng-model="vm.lecMensual.year" type="number">
+                <md-select ng-model="vm.lecMensual.year">
+                  <md-option ng-repeat="anio in vm.anios" value="{{ anio.abbrev }}">{{ anio.abbrev }}</md-option>
+                </md-select>
               </md-input-container>
             </div>
             <div flex>
@@ -53,7 +55,7 @@
               <md-input-container md-no-float class="md-block">
                 <label>Lectura Anterior</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="vm.lecMensual.lectura_anterior" type="number" disabled>
+                <input ng-model="ultimoRegistro.lectura_anterior" type="number" disabled>
               </md-input-container>
             </div>
             <div flex>
@@ -80,14 +82,14 @@
               <md-input-container md-no-float class="md-block">
                 <label>Cargo Fijo</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.lecMensual.cargo_fijo" type="number">
+                <input ng-model="vm.parametros.cargo_fijo" type="number" disabled>
               </md-input-container>
             </div>
             <div flex>
               <md-input-container md-no-float class="md-block">
                 <label>Alcantarillado</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="vm.lecMensual.alcantarillado" type="number">
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
               </md-input-container>
             </div>
           </div>
@@ -123,7 +125,7 @@
             </div>
             <div flex="50" flex-xs="100">
               <div layout="row" layout-align="end center" flex layout-xs="column">
-                <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros" style="margin-top: 14px;">
+                <md-button class="md-icon-button md-raised" layout-fill ui-sref="medidorRegistrosMensuales" style="margin-top: 14px;">
                   <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
                 </md-button>
               </div> 
