Arreglo en Registro Mensual

--- a/src/app/components/parametros/parametros.html
+++ b/src/app/components/parametros/parametros.html
@@ -15,45 +15,44 @@
           </center>
         </div>  
       </div>
-      
       <div layout="row" layout-xs="column" style="margin-bottom: 40px;">
         <div flex="100" flex-xs="100" flex-sm="100" flex-md="100" layout="column" layout-xs="column" class="fond" style="background-color: #74C56E">
           <center><h3>Parametros</h3></center>
           <div layout="row" style="margin-top: -20px; margin-left: 25px;">
-            <h4>Valor Metro:</h4>
-            <h4 style="margin-left: 122px;">{{ vm.parametros.valor_metro }}</h4>
+            <h5>Valor Metro:</h5>
+            <h5 style="margin-left: 107px;">$ {{ vm.parametros.valor_metro }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Valor Máximo Descuento:</h4>
-            <h4 style="margin-left: 30px;">{{ vm.parametros.valor_maximo_descuento }}</h4>
+            <h5>Valor Máximo Descuento:</h5>
+            <h5 style="margin-left: 31px;">$ {{ vm.parametros.valor_maximo_descuento }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Valor Sobre Consumo:</h4>
-            <h4 style="margin-left: 55px;">{{ vm.parametros.valor_sobre_consumo }}</h4>
+            <h5>Valor Sobre Consumo:</h5>
+            <h5 style="margin-left: 51px;">$ {{ vm.parametros.valor_sobre_consumo }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Metros Sobre Consumo:</h4>
-            <h4 style="margin-left: 45px;">{{ vm.parametros.metros_sobre_consumo }}</h4>
+            <h5>Metros Sobre Consumo:</h5>
+            <h5 style="margin-left: 43px;">{{ vm.parametros.metros_sobre_consumo }} m3</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Cargo Fijo:</h4>
-            <h4 style="margin-left: 136px;">{{ vm.parametros.cargo_fijo }}</h4>
+            <h5>Cargo Fijo:</h5>
+            <h5 style="margin-left: 119px;">$ {{ vm.parametros.cargo_fijo }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Alcantarillado:</h4>
-            <h4 style="margin-left: 104px;">{{ vm.parametros.alcantarillado }}</h4>
+            <h5>Alcantarillado:</h5>
+            <h5 style="margin-left: 92px;">$ {{ vm.parametros.alcantarillado }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Multa Reunión:</h4>
-            <h4 style="margin-left: 104px;">{{ vm.parametros.multa_reunion }}</h4>
+            <h5>Multa Reunión:</h5>
+            <h5 style="margin-left: 92px;">$ {{ vm.parametros.multa_reunion }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Multa Corte:</h4>
-            <h4 style="margin-left: 125px;">{{ vm.parametros.multa_corte }}</h4>
+            <h5>Multa Corte:</h5>
+            <h5 style="margin-left: 109px;">$ {{ vm.parametros.multa_corte }}</h5>
           </div>
           <div layout="row" style="margin-top: -30px; margin-left: 25px;">
-            <h4>Multa Adulteración:</h4>
-            <h4 style="margin-left: 70px;">{{ vm.parametros.multa_adulteracion }}</h4>
+            <h5>Multa Adulteración:</h5>
+            <h5 style="margin-left: 63px;">$ {{ vm.parametros.multa_adulteracion }}</h5>
           </div>
         </div>
       </div>
