--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -26,7 +26,7 @@
       </div>
       <div layout-xs="column" class="datos">
         <div flex>
-          <div layout="row" layout-xs="column">
+          <div layout="row" layout-xs="column" style="margin-bottom: 20px;">
             <div flex>
               <md-input-container md-no-float class="md-block">
                 <label>Año</label>
@@ -53,23 +53,34 @@
           <div layout="row" layout-xs="column">
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Lectura Anterior</label>
+                <label>Lectura Anterior (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="ultimoRegistro.lectura_anterior" type="number" disabled>
+                <input ng-model="vm.lecturaMensual.lectura" type="number" disabled>
               </md-input-container>
             </div>
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Lectura Actual</label>
+                <label>Lectura Actual (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
                 <input ng-model="vm.lecMensual.lectura" type="number">
               </md-input-container>
             </div>
+          </div>
+        </div>
+      </div>
+      <div layout-xs="column" class="datos">
+        <div flex>
+          <div layout="row" layout-xs="column">
+            <div flex layout="row" layout-align="center center" style="margin-top: -15px;">
+              <md-input-container md-no-float class="md-block">
+                <md-button id="registro" class="md-raised marg" md-colors="{background: 'light-green-900'}" layout-fill style="min-height: 50px; width: 200px;" ng-click="vm.calcular(vm.lecMensual)">Calcular</md-button>
+              </md-input-container>
+            </div>
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Consumo</label>
+                <label>Consumo (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="vm.lecMensual.consumo" type="number">
+                <input ng-model="vm.consumo" type="number" disabled>
               </md-input-container>
             </div>
           </div>
@@ -80,14 +91,14 @@
           <div layout="row" layout-xs="column">
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Cargo Fijo</label>
+                <label>Cargo Fijo $</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="vm.parametros.cargo_fijo" type="number" disabled>
               </md-input-container>
             </div>
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Alcantarillado</label>
+                <label>Alcantarillado $</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
                 <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
               </md-input-container>
@@ -100,14 +111,14 @@
           <div layout="row" layout-xs="column">
             <div flex>
               <md-input-container class="md-icon-float md-block">
-                <label>Valor a Pagar (CLP) $:</label>
+                <label>Valor a Pagar $:</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.lecMensual.valor_pagar" type="number">
+                <input ng-model="vm.valorPagar" type="number" disabled>
               </md-input-container>
             </div>
             <div flex>
               <md-input-container class="md-icon-float md-block">
-                <label>Saldo Anterior (CLP) $:</label>
+                <label>Saldo Anterior $:</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="vm.lecMensual.saldo_pagado" type="number">
               </md-input-container>
