update emisión de boleta

--- a/src/app/components/menuRegistros/menuRegistros.html
+++ b/src/app/components/menuRegistros/menuRegistros.html
@@ -103,7 +103,6 @@
                 </md-card>
               </md-button>
             </div>
-
             <div flex>
               <!--<md-button ui-sref="registroMensual">-->
               <md-button ng-click="vm.goToMedidores()">
@@ -123,6 +122,26 @@
               </md-button>
             </div> 
             <div flex>
+              <md-button ui-sref="#">
+                <md-card class="md-whiteframe-8dp">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Emitir</span>
+                      <span class="md-headline">Boleta</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 60px" src="/assets/img/ticket.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div> 
+          </div>
+
+          <div layout-md="column" layout-lg="row">
+            <div flex>
               <md-button ui-sref="registroPagos">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -139,9 +158,6 @@
                 </md-card>
               </md-button>
             </div> 
-          </div>
-
-          <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="abonoBoleta">
                 <md-card class="md-whiteframe-8dp">
@@ -153,6 +169,23 @@
                     <md-card-title-media>
                       <div class="md-media-md card-media">
                         <center><img style="width: 60px" src="/assets/img/payment.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+            <div flex>
+              <md-button ui-sref="#">
+                <md-card class="md-whiteframe-8dp">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">PRÓXIMA</span>
+                      <span class="md-headline">FUNCIONALIDAD</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <!--<center><img style="width: 60px" src="/assets/img/payment.png"></img></center>-->
                       </div>
                     </md-card-title-media>
                   </md-card-title>
