--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -91,15 +91,15 @@
           <div layout="row" layout-xs="column">
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Cargo Fijo $</label>
+                <label>Cargo Fijo $/socio</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="vm.parametros.cargo_fijo" type="number" disabled>
               </md-input-container>
             </div>
             <div flex>
               <md-input-container md-no-float class="md-block">
-                <label>Alcantarillado $</label>
-                <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
+                <label>Alcantarillado $/m3</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
               </md-input-container>
             </div>
