--- a/src/app/components/medidores/medidorRegistrosMensuales.html
+++ b/src/app/components/medidores/medidorRegistrosMensuales.html
@@ -5,7 +5,7 @@
         <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
       </md-button>
     </div>
-    <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
+    <div flex="80" flex-offset="10" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
       <div flex flex-xs="90" flex-offset-xs="5">
         <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
           <div flex flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" class="fond" style="background-color: grey; width: 300px;">
@@ -18,10 +18,20 @@
             <center>
               <h2>Registros de Lectura Mensual</h2>
             </center>
-            <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px; width: 100%; margin-bottom: 20px;" ng-click="vm.goToRegistro()">Registrar Lectura</md-button>
           </div>
         </div>
       </div>
+      <center>  
+        <div layout-md="column" layout-lg="row">
+          <div flex>
+            <md-button id="registro" class="md-raised marg" md-colors="{background: 'light-green-700'}" layout-fill style="min-height: 50px; width: 200px; margin-bottom: 20px;" ng-click="vm.goToRegistroMensual()">Registrar Lectura</md-button>
+          </div>
+          <div flex>
+            <md-button id="registro" class="md-raised marg" md-colors="{background: 'orange-A200'}" layout-fill style="min-height: 50px; width: 200px; margin-bottom: 20px;" ng-click="vm.goToEmitirBoleta()">Emitir Boleta</md-button>
+          </div>
+        </div>
+      </center>
+      <br>
     </div>
     <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
       <md-table-container>
