cambios en formulario emitir boleta

--- a/src/app/components/emisionCobranza/emisionCobranza.html
+++ b/src/app/components/emisionCobranza/emisionCobranza.html
@@ -9,63 +9,75 @@
 
       <div layout-gt-sm="row">
         <md-content flex layout-gt-sm="column" style="border-radius: 20px; border: 1px solid grey;" layout-padding>
+          <div layout="column" layout-xs="column" layout-align="center center" style="margin-top: 10px;">
+            <div style="margin-top: -30px;">
+              <h3>Boleta</h3>
+            </div>
+            <div layout="column" layout-xs="column">
+              <md-input-container md-no-float class="md-block" style="margin-top: -5px;">
+                <label>Nro de Boleta</label>
+                <md-icon md-svg-src="/assets/img/number.svg"></md-icon>
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+              </md-input-container>
+            </div>
+
+            <div style="margin-top: -30px;">
+              <h3>Datos del Cliente</h3>
+            </div>
+            <div layout="column" layout-xs="column">
+              <md-input-container class="md-icon-float md-block" style="margin-top: -5px;">
+                <label>Nombre Cliente</label>
+                <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+                <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
+              </md-input-container>
+            
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Domicilio</label>
+                <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
+                <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
+              </md-input-container>
+           
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Medidor</label>
+                <md-icon md-svg-src="/assets/img/medidor.svg"></md-icon>
+                <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
+              </md-input-container>
+            </div>
+
+            <div style="margin-top: -30px;">
+              <h3>Datos de Lectura</h3>
+            </div>
+            <div layout="column" layout-xs="column">
+              <md-input-container md-no-float class="md-block" style="margin-top: -5px;">
+                <label>Lectura Anterior (m3)</label>
+                <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
+                <input ng-model="vm.lecturaMensual.lectura" type="number" disabled>
+              </md-input-container>
           
-          <div style="margin-top: -30px;">
-            <h3>Datos del Cliente</h3>
-          </div>
-          <div layout="column" layout-xs="column">
-            <md-input-container class="md-icon-float md-block" style="margin-top: -5px;">
-              <label>Nombre</label>
-              <md-icon md-svg-src="/assets/img/number.svg"></md-icon>
-              <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
-            </md-input-container>
-          
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Domicilio</label>
-              <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-              <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
-            </md-input-container>
-         
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Medidor</label>
-              <md-icon md-svg-src="/assets/img/calendar.svg"></md-icon>
-              <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
-            </md-input-container>
-          </div>
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Lectura Actual (m3)</label>
+                <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
+                <input ng-model="vm.lecMensual.lectura" type="number">
+              </md-input-container>
+       
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Consumo (m3)</label>
+                <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
+                <input ng-model="vm.consumo" type="number" disabled>
+              </md-input-container>
 
-          <div style="margin-top: -30px;">
-            <h3>Datos de Lectura</h3>
-          </div>
-          <div layout="column" layout-xs="column">
-            <md-input-container md-no-float class="md-block" style="margin-top: -5px;">
-              <label>Lectura Anterior (m3)</label>
-              <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-              <input ng-model="vm.lecturaMensual.lectura" type="number" disabled>
-            </md-input-container>
-        
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Lectura Actual (m3)</label>
-              <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-              <input ng-model="vm.lecMensual.lectura" type="number">
-            </md-input-container>
-     
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Consumo (m3)</label>
-              <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-              <input ng-model="vm.consumo" type="number" disabled>
-            </md-input-container>
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Cargo Fijo $/socio</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.parametros.cargo_fijo" type="number" disabled>
+              </md-input-container>
 
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Cargo Fijo $/socio</label>
-              <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-              <input ng-model="vm.parametros.cargo_fijo" type="number" disabled>
-            </md-input-container>
-
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Alcantarillado $/m3</label>
-              <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-              <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
-            </md-input-container>
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Alcantarillado $/m3</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+              </md-input-container>
+            </div>
           </div>
         </md-content>
 
@@ -74,178 +86,100 @@
         </div><br>
 
         <md-content flex layout-gt-sm="column" style="border-radius: 20px; border: 1px solid grey;" layout-padding>
-          <div layout="column" layout-xs="column">
+          <div layout="column" layout-xs="column" layout-align="center center" style="margin-top: 10px;">
             <div style="margin-top: -30px;">
-              <h3>Boleta</h3>
+              <h3>Cobros por Multa</h3>
             </div>
-            <md-input-container md-no-float class="md-block" style="margin-top: 10px;">
-              <label>Nro de Boleta</label>
-              <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-              <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
-            </md-input-container>
-          </div>
+            <div layout="column" layout-xs="column">
+              <div layout="row">
+                <div flex="10"><md-checkbox ng-model="data.cb1"></md-checkbox></div>
+                <div flex="90">
+                  <md-input-container class="md-icon-float md-block" style="margin-top: -5px;">
+                    <label>Multa Reunión</label>
+                    <md-icon md-svg-src="/assets/img/multa.svg"></md-icon>
+                    <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id">
+                  </md-input-container>
+                </div>
+              </div>
+              <div layout="row">
+                <div flex="10"><md-checkbox ng-model="data.cb2"></md-checkbox></div>
+                <div flex="90">
+                  <md-input-container md-no-float class="md-block" style="margin-top: -10px;">
+                    <label>Multa Corte</label>
+                    <md-icon md-svg-src="/assets/img/multa.svg"></md-icon>
+                    <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id">
+                  </md-input-container>
+                </div>
+              </div>
+              <div layout="row">
+                <div flex="10"><md-checkbox ng-model="data.cb3"></md-checkbox></div>
+                <div flex="90">
+                  <md-input-container md-no-float class="md-block" style="margin-top: -10px;">
+                    <label>Multa Adulteración</label>
+                    <md-icon md-svg-src="/assets/img/multa.svg"></md-icon>
+                    <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id">
+                  </md-input-container>
+                </div>
+              </div>
+            </div>
 
-          <div style="margin-top: -30px;">
-            <h3>Cobros por Multa</h3>
-          </div>
-          <div layout="column" layout-xs="column">
-            <div layout="row">
-              <div flex="10"><md-checkbox ng-model="data.cb1"></md-checkbox></div>
-              <div flex="90">
-                <md-input-container class="md-icon-float md-block" style="margin-top: -10px;">
-                  <label>Multa Reunión</label>
-                  <md-icon md-svg-src="/assets/img/number.svg"></md-icon>
-                  <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id">
-                </md-input-container>
-              </div>
-            </div>
-            <div layout="row">
-              <div flex="10"><md-checkbox ng-model="data.cb2"></md-checkbox></div>
-              <div flex="90">
-                <md-input-container md-no-float class="md-block" style="margin-top: -10px;">
-                  <label>Multa Corte</label>
-                  <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-                  <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id">
-                </md-input-container>
-              </div>
-            </div>
-            <div layout="row">
-              <div flex="10"><md-checkbox ng-model="data.cb3"></md-checkbox></div>
-              <div flex="90">
-                <md-input-container md-no-float class="md-block" style="margin-top: -10px;">
-                  <label>Multa Adulteración</label>
-                  <md-icon md-svg-src="/assets/img/calendar.svg"></md-icon>
-                  <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id">
-                </md-input-container>
-              </div>
-            </div>
-          </div>
-          <div layout="column" layout-xs="column">
             <div style="margin-top: -30px;">
               <h3>Saldos</h3>
             </div>
-            <md-input-container md-no-float class="md-block" style="margin-top: 0px; width: 224px; margin-bottom: 40px;">
-              <label>Subsidio $</label>
-              <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-              <md-select ng-model="vm.cliente.subsidio_id">
-                <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
-              </md-select>
-            </md-input-container>
+            <div layout="column" layout-xs="column">
+              <md-input-container md-no-float class="md-block" style="margin-top: 0px; width: 224px; margin-bottom: 40px;">
+                <label>Subsidio $</label>
+                <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
+                <md-select ng-model="vm.cliente.subsidio_id">
+                  <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
+                </md-select>
+              </md-input-container>
 
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Saldo $</label>
-              <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-              <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
-            </md-input-container>
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Saldo $</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+              </md-input-container>
 
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Monto a Pagar $</label>
-              <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-              <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
-            </md-input-container>
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Monto a Pagar $</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+              </md-input-container>
 
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Total Abono $</label>
-              <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-              <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
-            </md-input-container>
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Total Abono $</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+              </md-input-container>
+
+              <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
+                <label>Paga Boleta(?)</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+              </md-input-container>
+
+              <md-input-container md-no-float class="md-block" style="margin-top: -15px; margin-left: -13px;">
+                <label>Fecha de Pago</label>
+                <md-datepicker ng-model="ctrl.myDate" md-placeholder="Seleccione Día"></md-datepicker>
+              </md-input-container>
+              
+            </div>
+
+            <div style="margin-top: -30px;">
+              <h3>Total</h3>
+            </div>
+            <div layout="column" layout-xs="column">
+              <md-input-container class="md-icon-float md-block" style="margin-top: -5px; width: 224px;">
+                <label>Total $</label>
+                <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
+                <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
+              </md-input-container>
+            </div>
           </div>
-
-          
         </md-content>
-
-
         
       </div><br>
-
-      <!--<div layout-gt-sm="row">
-        
-        <md-content flex layout-gt-sm="column" style="border-radius: 20px; border: 1px solid grey;">
-          <div layout="column" layout-xs="column" layout-align="center center">
-            <div layout-align="center center">
-              <center>
-                <h3>Datos del Cliente</h3><br>
-              </center>
-            </div>
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Nombre Cliente</label>
-              <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-              <input ng-model="vm.cliente.nombre" type="text">
-            </md-input-container>
-
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Domicilio</label>
-              <md-icon md-svg-src="/assets/img/telefono.svg"></md-icon>
-              <input ng-model="vm.cliente" type="text">
-            </md-input-container>
-
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Medidor</label>
-              <md-icon md-svg-src="/assets/img/telefono.svg"></md-icon>
-              <input ng-model="vm.cliente" type="text">
-            </md-input-container>
-
-            <div layout-align="center center">
-              <center>
-                <h3>Datos de Lectura</h3><br>
-              </center>
-            </div>
-            <md-input-container class="md-icon-float md-block" style="margin-top: -20px;">
-              <label>Lectura Actual</label>
-              <md-icon md-svg-src="/assets/img/direccion.svg"></md-icon>
-              <input ng-model="vm.cliente" type="">
-            </md-input-container>
-          
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Lectura Anterior</label>
-              <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-              <input ng-model="vm.cliente" type="">
-            </md-input-container>
-        
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Consumo</label>
-              <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
-              <input ng-model="vm.cliente" type="">
-            </md-input-container>
-          </div>
-        </md-content><br>
-
-        <div flex="5" hide-xs hide-sm>
-        </div>
-
-        <md-content flex layout-gt-sm="column" style="border-radius: 20px; border: 1px solid grey;">
-          <div layout="column" layout-xs="column" layout-align="center center">
-            <div layout-align="center center">
-              <center>
-                <h3>Valores ($)</h3>
-              </center>
-            </div>
-
-            <md-input-container md-no-float class="md-block" style="margin-top: 0px; width: 224px; margin-bottom: 40px;">
-              <label>Subsidio</label>
-              <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-              <md-select ng-model="vm.cliente.subsidio_id">
-                <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
-              </md-select>
-            </md-input-container>
-
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Cargo Fijo</label>
-              <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
-              <input ng-model="vm.cliente" type="">
-            </md-input-container>
-
-            <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-              <label>Alcantarillado</label>
-              <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
-              <input ng-model="vm.cliente" type="">
-            </md-input-container>
-
-
-          </div>
-
-        </md-content><br>
-      </div>-->
 
       <div>
         <div flex layout-xs="column" class="datos">
