--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -10,7 +10,7 @@
             <div flex>
               <md-input-container class="md-icon-float md-block">
                 <label>Medidor</label>
-                <md-icon md-svg-src="/assets/img/number.svg"></md-icon>
+                <md-icon md-svg-src="/assets/img/medidor.svg"></md-icon>
                 <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
               </md-input-container>
             </div>
